gap fixed

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -131,7 +131,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 2.8rem;
+  gap: 3.2rem;
   max-width: 38.4rem;
   margin: 17.4rem 4rem 0;
   padding: 4rem;
@@ -144,7 +144,7 @@ body {
     max-width: 32.7rem;
     padding: 2.4rem;
     margin: 11.6rem 2.4rem 0;
-    gap: 2.8rem;
+    gap: 3.2rem;
   }
 }
 .card-avatar {
